Fixed color pallete, added bold font for better visibility of points and percentage

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  background-color: #030712;
+  background-color: #01030f;
 }
 
 @theme {
